macros/tests/ui/gprogram_fails_for_service_multiple_groute_attributes_are_not_allowed.stderr
error: multiple `groute` attributes are not allowed for the same function
  --> tests/ui/gprogram_fails_for_service_multiple_groute_attributes_are_not_allowed.rs:10:7
   |
10 |     #[groute("svc2")]
   |       ^^^^^^
